ATHX initial commit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="icon" type="image/icon" href="favicon.ico" >
-    <title>TurtleCoin [TRTL] Block Explorer</title>
+    <title>Athena [TRTL] Block Explorer</title>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.4.0/jquery.timeago.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-sparklines/2.1.2/jquery.sparkline.min.js"></script>
@@ -258,7 +258,7 @@ $('#txt_search').keyup(function(e){
 					<small>
 					<!-- This copyright should be left intact -->
 				
-					Powered by <a target="_blank" href="https://github.com/turtlecoin/block-explorer"><i class="fa fa-github"></i> Turtle Blockchain Explorer</a> v. 1.0.0.<br />
+					Powered by <a target="_blank" href="https://github.com/fexra/block-explorer"><i class="fa fa-github"></i> Athena Blockchain Explorer</a> v. 1.0.0.<br />
 					<span class="text-muted">Code from <strong>Karbowanec Blockchain Explorer</strong><br />
 					<span class="text-muted">Partially based on <strong>cryptonote-universal-pool</strong><br />
 					open sourced under the <a href="http://www.gnu.org/licenses/gpl-2.0.html">GPL</a></span>
