--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ $('#txt_search').keyup(function(e){
 			<div class="col-lg-4 col-md-3 col-sm-3 text-center">
 				<p>
 					<small>
-						&copy; 2018 <strong>TRTLD13</strong> 
+						&copy; 2018 <strong>ATHX</strong> 
 					</small>
 				</p>
 			</div>
