--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="icon" type="image/icon" href="favicon.ico" >
-    <title>Athena [XAT] Block Explorer</title>
+    <title>Athena [ATHX] Block Explorer</title>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.4.0/jquery.timeago.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-sparklines/2.1.2/jquery.sparkline.min.js"></script>
@@ -249,7 +249,7 @@ $('#txt_search').keyup(function(e){
 			<div class="col-lg-4 col-md-3 col-sm-3 text-center">
 				<p>
 					<small>
-						&copy; 2018 <strong>XAT</strong> 
+						&copy; 2018 <strong>ATHX</strong> 
 					</small>
 				</p>
 			</div>
