--- a/pages/check_txn.html
+++ b/pages/check_txn.html
@@ -20,7 +20,7 @@
 
     <div class="row">
         <label for="public_address">Recipient Public Address</label>
-        <input class="form-control" placeholder="102 char public XAT address" id="public_address">
+        <input class="form-control" placeholder="102 char public ATHX address" id="public_address">
 
     </div>
 
