--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-sparklines/2.1.2/jquery.sparkline.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <link href="css/themes/turtle/style.css" rel="stylesheet" id="theme_link">
+    <link href="css/themes/athena/style.css" rel="stylesheet" id="theme_link">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="./config.js"></script>
     <script src="js/main.js"></script>
@@ -267,7 +267,7 @@ $('#txt_search').keyup(function(e){
 			</div>
 			<div class="col-lg-4 col-md-3 col-sm-3 text-center">
                                 <ul class="list-unstyled">
-				        <li><a href="http://turtlecoin.lol/">TURTLECOIN.LOL</a></li>
+				        <li><a href="http://athx.org/">The Athena Foundation</a></li>
                                </ul>
 			</div>
 		</div>
