--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <link href="css/themes/athena/style.css" rel="stylesheet" id="theme_link">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <script src="./config.js"></script>
+	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+
+	<script src="./config.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body>
