--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 		<header class="navbar" style="padding-top:10px;">
 			<div class="container">
 			<div class="navbar-brand">
-				<a class="navbar-item is-size-3 has-text-weight-semibold">
+				<a href="/" class="navbar-item is-size-3 has-text-weight-semibold">
 					Athena Explorer
 				</a>
 				<span class="navbar-burger burger" data-target="navbarMenu">
@@ -222,7 +222,7 @@
 				</span>
 
 				<span class="navbar-item">
-						<input class="input" placeholder="Height/Hash/PaymentID" id="txt_search">
+						<input class="input" placeholder="Height/Hash/Payment ID" id="txt_search">
 						<button class="button is-black" type="button" id="btn_search">
 						<i class="fa fa-search"></i> Search
 						</button>
