--- a/pages/home.html
+++ b/pages/home.html
@@ -4,7 +4,7 @@
             <div class="panel-heading">
                 <h3 class="panel-title"><i class="fa fa-tasks fa-fw" aria-hidden="true"></i> Stats</h3>
             </div>
-            <div class="panel-body">
+            <div class="panel-block">
                 <div class="row">
                     <div class="column">
                         <ul class="nav nav-pills nav-stacked">
@@ -35,7 +35,7 @@
                     <span class="text-default" data-toggle="tooltip" data-placement="right" data-original-title="Difficulty based on last blocks from the list below. Block size, transactions count. Load more blocks to enlarge chart range."><i class="fa fa-question-circle"></i></span>
                 </h3>
             </div>
-            <div class="panel-body chart-wrapper">
+            <div class="panel-block chart-wrapper">
                 <canvas id="difficultyChart" height="210"></canvas>
             </div>
         </div>
@@ -49,7 +49,7 @@
             <span class="text-default" data-toggle="tooltip" data-placement="right" data-original-title="Recent transactions waiting to be included into a block. Once it happens a transaction gets into the blockchain and becomes confirmed."><i class="fa fa-question-circle"></i></span>
         </h3>
     </div>
-    <div class="panel-body">
+    <div class="panel-block">
         <div class="table">
             <table class="table  is-hoverable" id="mem_pool_table">
                 <thead>
@@ -75,7 +75,7 @@
             <span id="block-range-wrapper" style="float:right">Viewing Range: <span id="block-range">______ - ______</span></span>
         </h3>
     </div>
-    <div class="panel-body">
+    <div class="panel-block">
         <div class="input-group">
             <a id="next-page" href="#" class="btn btn-default input-group-addon disabled"><i class="fa fa-arrow-left" aria-hidden="true"></i> Newer</a>
             <span class="input-group-addon">№</span>
