--- a/pages/home.html
+++ b/pages/home.html
@@ -51,7 +51,7 @@
     </div>
     <div class="panel-block">
         <div class="table">
-            <table class="table  is-hoverable" id="mem_pool_table">
+            <table class="table is-hoverable is-size-7" id="mem_pool_table">
                 <thead>
                     <tr>
                         <!-- <th width="30%"><i class="fa fa-clock-o"></i> Date &amp; time</th> Add this back when mempool json adds a-->
@@ -83,9 +83,10 @@
             <a id="goto-height-go" href="#" class="btn btn-default input-group-addon">Go</a>
             <a id="prev-page" href="#" class="btn btn-default input-group-addon">Older <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
-        <br />
-        <div class="table">
-            <table class="table is-hoverable">
+    </div>
+    <div class="panel-block">
+            <div class="table">
+            <table class="table is-hoverable is-size-7">
                 <thead>
                     <tr>
                         <th><i class="fa fa-bars"></i> Height</th>
