--- a/pages/home.html
+++ b/pages/home.html
@@ -1,40 +1,42 @@
 <div class="tile is-ancestor">
-     <div class="tile is-6" id="network-stats">
-        <article class="tile is-child notification is-primary">
-            <i class="fa fa-tasks" aria-hidden="true"></i> Stats</h3>
-            <div class="columns">
-                <div class="column">
-                    <ul class="nav nav-pills nav-stacked">
-                        <li><i class="fa fa-bars"></i> Height: <span id="networkHeight"></span></li>
-                        <li><i class="fa fa-exchange"></i> Transactions: <span id="networkTransactions"></span></li>
-                        <li><i class="fa fa-certificate"></i> Reward: <span id="currentReward"></span></li>
-                        <li><i class="fa fa-money"></i> Supply: <span id="totalCoins"></span></li>
-                        <li><i class="fa fa-percent" aria-hidden="true"></i> Emission: <span id="emissionPercent"></span> %</li>
-                    </ul>
+     <div class="tile is-parent is-6" id="network-stats">
+        <div class="tile">
+            <article class="tile is-child notification is-warning">
+                <i class="fa fa-tasks" aria-hidden="true"></i> Stats</h3>
+                <div class="columns">
+                    <div class="column">
+                        <ul class="nav nav-pills nav-stacked">
+                            <li><i class="fa fa-bars"></i> Height: <span id="networkHeight"></span></li>
+                            <li><i class="fa fa-exchange"></i> Transactions: <span id="networkTransactions"></span></li>
+                            <li><i class="fa fa-certificate"></i> Reward: <span id="currentReward"></span></li>
+                            <li><i class="fa fa-money"></i> Supply: <span id="totalCoins"></span></li>
+                            <li><i class="fa fa-percent" aria-hidden="true"></i> Emission: <span id="emissionPercent"></span> %</li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <ul class="nav nav-pills nav-stacked">
+                            <li><i class="fa fa-unlock-alt"></i> Difficulty: <span id="networkDifficulty"></span></li>
+                            <li><i class="fa fa-lock"></i> Average Difficulty: <span id="avgDifficulty"></span></li>
+                            <li><i class="fa fa-tachometer"></i> Hash Rate: <span id="networkHashrate"></span></li>
+                            <li><i class="fa fa-clock"></i> Average Hash Rate: <span id="avgHashrate"></span></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="column">
-                    <ul class="nav nav-pills nav-stacked">
-                        <li><i class="fa fa-unlock-alt"></i> Difficulty: <span id="networkDifficulty"></span></li>
-                        <li><i class="fa fa-lock"></i> Average Difficulty: <span id="avgDifficulty"></span></li>
-                        <li><i class="fa fa-tachometer"></i> Hash Rate: <span id="networkHashrate"></span></li>
-                        <li><i class="fa fa-clock"></i> Average Hash Rate: <span id="avgHashrate"></span></li>
-                    </ul>
-                </div>
-            </div>
-        </article>
+            </article>
+        </div>
     </div>
+    <div class="tile is-parent is-6">
+        <div class="tile">
+            <article class="tile is-child notification is-danger">
+                <h3 class="panel-title"><i class="fa fa-chart-line" aria-hidden="true"></i> Chart </h3>
 
-    <div class="tile is-6">
-        <article class="tile is-child notification is-primary">
-            <h3 class="panel-title"><i class="fa fa-chart-line" aria-hidden="true"></i> Chart </h3>
-
-            <div class="chart-wrapper">
-                <canvas id="difficultyChart" height="210"></canvas>
-            </div>
-        </article>
+                <div class="chart-wrapper">
+                    <canvas id="difficultyChart" height="210"></canvas>
+                </div>
+            </article>
+        </div>
     </div>
 </div>
-
 <div class="panel panel-default">
     <div class="panel-heading">
         <h3 class="panel-title"><i class="fa fa-exchange" aria-hidden="true"></i> Memory Pool
