--- a/pages/home.html
+++ b/pages/home.html
@@ -37,7 +37,8 @@
             </article>
         </div>
     </div>
-
+</div>
+<div class="tile is-ancestor">
     <div class="tile is-parent is-12">
         <div class="tile">
             <article class="tile is-child notification is-info">
