--- a/pages/home.html
+++ b/pages/home.html
@@ -45,7 +45,7 @@
                 <h3><i class="fa fa-memory" aria-hidden="true"></i> Memory Pool <span id="mempool_count" class="badge"></span></h3>
                 <hr>
                 <div class="table">
-                    <table class="table is-hoverable is-size-7" id="mem_pool_table">
+                    <table class="table is-hoverable is-transparent is-size-7" id="mem_pool_table">
                         <thead>
                             <tr>
                                 <!-- <th width="30%"><i class="fa fa-clock-o"></i> Date &amp; time</th> Add this back when mempool json adds a-->
@@ -61,7 +61,8 @@
             </article>
         </div>
     </div>
-
+</div>    
+<div class="tile is-ancestor">
     <div class="tile is-parent is-12">
         <div class="tile">
             <article class="tile is-child notification is-success">
@@ -76,7 +77,7 @@
                 </div>
                 <div class="table">
 
-                    <table class="table is-hoverable is-size-7">
+                    <table class="table is-hoverable is-transparent is-size-7">
                         <thead>
                             <tr>
                                 <th><i class="fa fa-bars"></i> Height</th>
