--- a/pages/home.html
+++ b/pages/home.html
@@ -1,6 +1,8 @@
 <div class="tile is-ancestor">
      <div class="tile is-parent is-6" id="network-stats">
-        <h3 class="is-black">Overview</h3>
+        <div>
+            <h3 class="is-black">Overview</h3>
+        </div>
         <div class="tile">
             <article class="tile is-child notification is-warning">
                 <div class="columns">
@@ -26,7 +28,7 @@
         </div>
     </div>
     <div class="tile is-parent is-6">
-        <h3 class="is-black">Overview</h3>
+        < class="is-black">Overview</h3>
         <div class="tile">
             <article class="tile is-child notification is-danger">
                 <div class="chart-wrapper">
