--- a/pages/home.html
+++ b/pages/home.html
@@ -1,6 +1,6 @@
 <div class="tile is-ancestor">
      <div class="tile is-parent is-6" id="network-stats">
-        <div>
+        <div class="tile is-child">
             <h3 class="is-black">Overview</h3>
         </div>
         <div class="tile">
@@ -28,7 +28,6 @@
         </div>
     </div>
     <div class="tile is-parent is-6">
-        < class="is-black">Overview</h3>
         <div class="tile">
             <article class="tile is-child notification is-danger">
                 <div class="chart-wrapper">
