--- a/pages/home.html
+++ b/pages/home.html
@@ -1,9 +1,10 @@
 <div class="tile is-ancestor">
      <div class="tile is-parent is-6" id="network-stats">
-        <div class="tile is-child">
-            <h3 class="is-black">Overview</h3>
-        </div>
+
         <div class="tile">
+                <div >
+                        <h3 class="is-black">Overview</h3>
+                    </div>
             <article class="tile is-child notification is-warning">
                 <div class="columns">
                     <div class="column">
