titles and badge fix

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,10 +1,6 @@
 <div class="tile is-ancestor">
      <div class="tile is-parent is-6" id="network-stats">
-
         <div class="tile">
-                <div >
-                        <h3 class="is-black">Overview</h3>
-                    </div>
             <article class="tile is-child notification is-warning">
                 <div class="columns">
                     <div class="column">
@@ -41,8 +37,8 @@
 <div class="tile is-ancestor">
     <div class="tile is-parent is-12">
         <div class="tile">
-            <article class="tile is-child notification is-info">
-                <h3><i class="fa fa-memory" aria-hidden="true"></i> Memory Pool <span id="mempool_count" class="badge"></span></h3>
+            <article class="tile is-child notification">
+                <h3><i class="fa fa-memory" aria-hidden="true"></i> Memory Pool <span id="mempool_count" class=".is-badge-top-right is-info "></span></h3>
                 <div class="table">
                     <table class="table is-hoverable is-fullwidth is-size-6" id="mem_pool_table">
                         <thead>
@@ -64,7 +60,7 @@
 <div class="tile is-ancestor">
     <div class="tile is-parent is-12">
         <div class="tile">
-            <article class="tile is-child notification is-success">
+            <article class="tile is-child notification">
                 <h3><i class="fa fa-cubes" aria-hidden="true"></i> Latest Blocks <span id="block-range-wrapper" style="float:right">Viewing Range: <span id="block-range">______ - ______</span></span>                    </h3>
                 <div class="input-group">
                     <a id="next-page" href="#" class="btn btn-default input-group-addon disabled"><i class="fa fa-arrow-left" aria-hidden="true"></i> Newer</a>
