--- a/pages/home.html
+++ b/pages/home.html
@@ -1,8 +1,9 @@
 <div class="tile is-ancestor">
      <div class="tile is-parent is-6" id="network-stats">
         <div class="tile">
-            <article class="tile is-child notification is-warning">
-                <div class="columns">
+            <article class="tile is-child notification">
+                <p class="title">Overview</p>
+                <div class="columns" style="padding-top:20px;">
                     <div class="column">
                         <ul class="nav nav-pills nav-stacked">
                             <li><i class="fa fa-bars"></i> Height: <span id="networkHeight"></span></li>
@@ -26,7 +27,8 @@
     </div>
     <div class="tile is-parent is-6">
         <div class="tile">
-            <article class="tile is-child notification is-danger">
+            <article class="tile is-child notification">
+                <p class="title">Chart</p>
                 <div class="chart-wrapper">
                     <canvas id="difficultyChart" height="210"></canvas>
                 </div>
@@ -38,7 +40,7 @@
     <div class="tile is-parent is-12">
         <div class="tile">
             <article class="tile is-child notification">
-                <h3><i class="fa fa-memory" aria-hidden="true"></i> Memory Pool <span id="mempool_count" class=".is-badge-top-right is-info "></span></h3>
+                <p class="title">Memory Pool <span id="mempool_count" class="is-badge-top-right is-info "></span></p>
                 <div class="table">
                     <table class="table is-hoverable is-fullwidth is-size-6" id="mem_pool_table">
                         <thead>
@@ -61,7 +63,15 @@
     <div class="tile is-parent is-12">
         <div class="tile">
             <article class="tile is-child notification">
-                <h3><i class="fa fa-cubes" aria-hidden="true"></i> Latest Blocks <span id="block-range-wrapper" style="float:right">Viewing Range: <span id="block-range">______ - ______</span></span>                    </h3>
+                <div class="level">
+                    <div class="level-left">
+                            <p class="title">Latest Blocks</p>
+                    </div>
+                    <div class="level-right">
+                            <p class="is-size-6">Viewing Range: <span id="block-range">______ - ______</span></p>
+                    </div>
+                    </div>
+              
                 <div class="input-group">
                     <a id="next-page" href="#" class="btn btn-default input-group-addon disabled"><i class="fa fa-arrow-left" aria-hidden="true"></i> Newer</a>
                     <span class="input-group-addon">№</span>
