--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,7 @@
      <div class="tile is-parent is-6" id="network-stats">
         <div class="tile">
             <article class="tile is-child notification">
-                <p class="title">Overview</p>
+                <p class="title title-is-4">Overview</p>
                 <div class="columns" style="padding-top:20px;">
                     <div class="column">
                         <ul class="nav nav-pills nav-stacked">
@@ -28,7 +28,7 @@
     <div class="tile is-parent is-6">
         <div class="tile">
             <article class="tile is-child notification">
-                <p class="title">Chart</p>
+                <p class="title title-is-4">Chart</p>
                 <div class="chart-wrapper">
                     <canvas id="difficultyChart" height="210"></canvas>
                 </div>
@@ -40,7 +40,7 @@
     <div class="tile is-parent is-12">
         <div class="tile">
             <article class="tile is-child notification">
-                <p class="title">Memory Pool <span id="mempool_count" class="is-badge-top-right is-info "></span></p>
+                <p class="title title-is-4">Memory Pool <span id="mempool_count" class="is-badge-top-right is-info "></span></p>
                 <div class="table">
                     <table class="table is-hoverable is-fullwidth is-size-6" id="mem_pool_table">
                         <thead>
@@ -61,7 +61,7 @@
 </div>    
 <div class="tile is-ancestor">
     <div class="tile is-parent is-12">
-        <div class="tile">
+        <div class="tile title-is-4">
             <article class="tile is-child notification">
                 <div class="level">
                     <div class="level-left">
