--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
 	<link href="css/themes/athena/style.css" rel="stylesheet" id="theme_link">
+	<link href="css/themes/athena/bulma-badge.min.css" rel="stylesheet">
 
 	<script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
 
