--- a/pages/home.html
+++ b/pages/home.html
@@ -72,13 +72,31 @@
                     </div>
                     </div>
               
-                <div class="input-group">
-                    <a id="next-page" href="#" class="btn btn-default input-group-addon disabled"><i class="fa fa-arrow-left" aria-hidden="true"></i> Newer</a>
-                    <span class="input-group-addon">№</span>
-                    <input id="goto-height" type="text" class="form-control" placeholder="Height">
-                    <a id="goto-height-go" href="#" class="btn btn-default input-group-addon">Go</a>
-                    <a id="prev-page" href="#" class="btn btn-default input-group-addon">Older <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-                </div>
+                    <div class="field has-addons has-addons-right">
+
+                            <p class="control">
+                              <a id="next-page" href="#" class="button is-dark disabled">
+                                    Newer
+                              </a>
+                            </p>
+
+                            <p class="control is-expanded">
+                              <inputd="goto-height" class="input" type="text" placeholder="Block Height">
+                            </p>
+
+                            <p class="control">
+                                <a id="prev-page" href="#" class="button is-back">
+                                    Go
+                                </a>
+                            </p>
+
+                            <p class="control">
+                              <a id="prev-page" href="#" class="button is-dark">
+                                    Older
+                              </a>
+                            </p>
+                          </div>
+
                 <hr>
                 <div class="table">
 
