--- a/index.html
+++ b/index.html
@@ -223,12 +223,48 @@
 					</a>
 				</span>
 
+				<span class="navbar-item" style="display:none;">
+					<a data-page="blockchain_block.html" href="#blockchain_block" class="button is-light hot_link">
+					<span class="icon">
+						<i class="fa fa-cubes"></i>
+					</span>
+					<span>Block</span>
+					</a>
+				</span>
+
+				<span class="navbar-item" style="display:none;">
+					<a data-page="blockchain_transaction.html" href="#blockchain_transaction" class="button is-light hot_link">
+					<span class="icon">
+						<i class="fa fa-cubes"></i>
+					</span>
+					<span>Transaction</span>
+					</a>
+				</span>
+
+				<span class="navbar-item" style="display:none;">
+					<a data-page="blockchain_payment_id.html" href="#blockchain_payment_id" class="button is-light hot_link">
+					<span class="icon">
+						<i class="fa fa-cubes"></i>
+					</span>
+					<span>Transactions by Payment ID</span>
+					</a>
+				</span>
+
+				<span class="navbar-item" style="display:none;">
+					<a data-page="support.html" href="#support" class="button is-light hot_link">
+					<span class="icon">
+						<i class="fa fa-comments"></i>
+					</span>
+					<span>Support</span>
+					</a>
+				</span>
+
+
 				<span class="navbar-item">
 						<input class="input" placeholder="Height/Hash/Payment ID" id="txt_search">
 						<button class="button is-black" type="button" id="btn_search">
 						<i class="fa fa-search"></i> Search
 						</button>
-	
 				</span>
 
 
