--- a/pages/pools.html
+++ b/pages/pools.html
@@ -1,13 +1,10 @@
-<!-- // pools stats by MainCoins @ http://krb.mypool.name -->
-<div class="row">
-    <div class="col-sm-12 col-md-6">
-        <div class="panel panel-default" id="network-stats">
-            <div class="panel-heading">
-                <h3 class="panel-title"><i class="fa fa-tachometer"></i> Stats</h3>
-            </div>
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-sm-6 col-md-6">
+<div class="tile is-ancestor">
+    <div class="tile is-parent is-6" id="network-stats">
+        <div class="tile">
+            <article class="tile is-child notification">
+                <p class="title size-is-4">Pools Overview</p>
+                <div class="columns" style="padding-top:20px;">
+                    <div class="ccolumn">
                         <ul class="nav nav-pills nav-stacked">
                             <li><i class="fa fa-tachometer"></i> Pools speed: <span id="totalPoolsHashrate"></span></li>
                             <li><i class="fa fa-tachometer"></i> Network speed: <span id="networkHashrate"></span></li>
@@ -15,7 +12,7 @@
 
                         </ul>
                     </div>
-                    <div class="col-sm-6 col-md-6">
+                    <div class="column">
                         <ul class="nav nav-pills nav-stacked">
                             <li><i class="fa fa-unlock-alt"></i> Current difficulty: <span id="networkDifficulty"></span></li>
                             <li><i class="fa fa-lock"></i> Average difficulty: <span id="avgDifficulty"></span></li>
@@ -23,67 +20,76 @@
                         </ul>
                     </div>
                 </div>
-
-            </div>
+            </article>
         </div>
     </div>
-    <div class="col-sm-12 col-md-6">
-        <div class="panel panel-default" id="network-stats">
-            <div class="panel-heading">
-                <h3 class="panel-title"><i class="fa fa-tachometer"></i> Estimate Mining Profits</h3>
-            </div>
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-sm-12 col-md-12">
-                        <div id="calcHashHolder">
-                            <div class="input-group">
-                                <input type="number" class="form-control" id="calcHashRate" placeholder="Enter your hash rate">
-                                <div class="input-group-btn">
-                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="calcHashDropdown">
-                                        <span id="calcHashUnit" data-mul="1">KH/s</span> <span class="caret"></span>
-                                    </button>
-                                    <ul class="dropdown-menu dropdown-menu-right" role="menu" id="calcHashUnits">
-                                        <li><a href="#" data-mul="0">H/s</a></li>
-                                        <li><a href="#" data-mul="1">KH/s</a></li>
-                                        <li><a href="#" data-mul="2">MH/s</a></li>
-                                    </ul>
-                                </div>
-                                <span class="input-group-addon">=</span>
-                                <span class="input-group-addon" id="calcHashResultsHolder"><span id="calcHashAmount"></span> <span id="calcHashSymbol"></span> ATHX / day</span>
-                            </div>
+    <div class="tile is-parent is-6">
+        <div class="tile">
+            <article class="tile is-child notification">
+                <p class="title size-is-4">> Estimate Mining Profits</p>
+                <div id="calcHashHolder">
+                    <div class="input-group">
+                        <input type="number" class="form-control" id="calcHashRate" placeholder="Enter your hash rate">
+                        <div class="input-group-btn">
+                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="calcHashDropdown">
+                                <span id="calcHashUnit" data-mul="1">KH/s</span> <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-right" role="menu" id="calcHashUnits">
+                                <li><a href="#" data-mul="0">H/s</a></li>
+                                <li><a href="#" data-mul="1">KH/s</a></li>
+                                <li><a href="#" data-mul="2">MH/s</a></li>
+                            </ul>
                         </div>
+                        <span class="input-group-addon">=</span>
+                        <span class="input-group-addon" id="calcHashResultsHolder"><span id="calcHashAmount"></span> <span id="calcHashSymbol"></span> ATHX / day</span>
                     </div>
                 </div>
-            </div>
+            </article>
         </div>
     </div>
 </div>
 
-<br />
-
-<div class="table-responsive">
-    <table id="network-hash" class="table table-hover">
-        <thead>
-            <tr>
-                <th><span id="symbol"></span> Pools</th>
-                <th class="sorttable_numeric"><i class="fa fa-bars"></i> Height</th>
-                <th class="sorttable_numeric"><i class="fa fa-tachometer"></i> Hashrate</th>
-                <th class="sorttable_numeric"><i class="fa fa-group"></i> Miners</th>
-                <th class="sorttable_numeric"><i class="fa fa-money"></i> Total Fee</th>
-                <th class="sorttable_numeric"><i class="fa fa-sign-out"></i> Min. Payout</th>
-                <th><i class="fa fa-clock-o"></i> Last Block Found</th>
-            </tr>
-        </thead>
-        <tbody id="pools_rows">
-        </tbody>
-    </table>
+<div class="tile is-ancestor">
+    <div class="tile is-parent is-12">
+        <div class="tile">
+            <article class="tile is-child notification">
+                <p class="title size-is-4" id="network-hash">Pool Network</p>
+                <div class="table">
+                    <table class="table is-hoverable is-fullwidth is-size-6" id="mem_pool_table">
+                        <thead>
+                            <tr>
+                                <th><span id="symbol"></span> Pools</th>
+                                <th class="sorttable_numeric"><i class="fa fa-bars"></i> Height</th>
+                                <th class="sorttable_numeric"><i class="fa fa-tachometer"></i> Hashrate</th>
+                                <th class="sorttable_numeric"><i class="fa fa-group"></i> Miners</th>
+                                <th class="sorttable_numeric"><i class="fa fa-money"></i> Total Fee</th>
+                                <th class="sorttable_numeric"><i class="fa fa-sign-out"></i> Min. Payout</th>
+                                <th><i class="fa fa-clock-o"></i> Last Block Found</th>
+                            </tr>
+                        </thead>
+                        <tbody id="pools_rows"></tbody>
+                    </table>
+                </div>
+            </article>
+        </div>
+    </div>
 </div>
 
+<div class="tile is-ancestor">
+        <div class="tile is-parent is-12">
+            <div class="tile">
+                <article class="tile is-child notification">
+                    <p class="title size-is-4" id="network-hash">Pool Chart</p>
+                    <canvas id="poolsChart" style="margin: 0 auto;" height="300"></canvas>
+                </article>
+            </div>
+        </div>
+    </div>
 
+    
 <div class="container">
     <div class="row">
         <div class="col-lg-6 col-lg-offset-3">
-            <canvas id="poolsChart" style="margin: 0 auto;" height="300"></canvas>
         </div>
     </div>
 </div>
